<resources>
    <string name="app_name">Brain+</string>
    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="login_uname">Enter your Name</string>
    <string name="pwd">Enter your Password</string>
    <string name="userId">Enter you Mail-ID</string>
    <string name="pwd1">Re-enter your Password</string>
    <string name="dobtext">Choose your Date of Birth</string>
    <string name="choose">Select Date</string>
    <string name="register">Register</string>
    <string name="new_user">New User? Click here to Register</string>
    <string name="uprofile"><u>Your Profile</u></string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>
    <string name="result">Results</string>
    <string name="pname">Your Name: </string>
    <string name="pmail">Your Mail-ID: </string>
    <string name="pdob">Your Date of Birth: </string>
    <string name="bollywood">Bollywood Quiz</string>
    <string name="computer">Computer Quiz</string>
    <string name="cricket">Cricket Quiz</string>
    <string name="gk">G.K. Quiz</string>
    <string name="india">India Quiz</string>
    <string name="strt">Start</string>
    <string name="ques">Total Number of Questions: 10</string>
    <string name="time">Time limit for each question: 15 seconds</string>
    <string name="mpq">Each Question is of 1 Mark</string>
    <string name="max_mark">Maximum Marks: 10</string>
    <string name="intro"> Introduction: </string>
    <string name="back">Click to go back to the Menu</string>
    <string name="counter">Time:</string>
    <string name="topic">Topic</string>
    <string name="score">Score</string>
    <string name="no">You haven\'t played any quiz now.</string>
    <string name="faq">FAQ</string>
    <string name="instruction">Instructions:</string>
    <string name="about">About Us</string>
    <string name="fpwd">Forgot Password?</string>
    <string name="q"> <u>Questions</u> </string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="g">Choose your Gender</string>
    <string name="pgender">Your Gender:</string>
    <string name="male">Male</string>
    <string name="ques1">Is Internet Connectivity required?</string>
    <string name="ans1">Yes, Internet connectivity is required.</string>
    <string name="ques4">What is the time limit for each question?</string>
    <string name="ans4">Time limit for each question is 15 seconds. If you fail to answer in 15 seconds next question will be displayed automatically.</string>
    <string name="ques5">Where can I see all of my scores?</string>
    <string name="ans5">In the profile section, there is a button \'Results\', you can click on the button to view your score in all quizzes.</string>
    <string name="ques3">Total Number of questions are?</string>
    <string name="ans3">There are 10 questions in every quiz.</string>
    <string name="ques6">How can I set my profile picture?</string>
    <string name="ans6">Click on the profile icon given in top right corner of dashboard page. Profile page will open. Click on the image icon and choose your picture which you want to upload.</string>
    <string name="ques2">What is the format of quiz?</string>
    <string name="ans2">There are total of 10 questions in each quiz having 4 options. Any one of those 4 options can be the answer. You have to select the option which is correct to give your answer. There is no negative marking and 1 mark is given for each correct answer.</string>
    <string name="about_desc">Brain+ is a quiz app where you can play quizzes, have fun and learn something new! Brain+ covers subjects like \nCricket Quiz,\nGK Quiz,\nComputer Quiz\nand many more. \nEducation doesn\'t stop in the classroom, use our app to learn on the go.</string>
</resources>