<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/bree_serif"
        android:text="@string/signup"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv2"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/userId"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_id"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/login_uname"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_pwd1"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="15dp"
            android:text="@string/g"/>

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_marginLeft="4dp"/>

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other" />

    </RadioGroup>

    <EditText
        android:id="@+id/user_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/user_pwd1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_pwd"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/pwd1"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="#FFFFFF" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="50dp" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rg"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:text="@string/dobtext" />

    <Button
        android:id="@+id/btn_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rg"
        app:layout_constraintStart_toEndOf="@id/tv3"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/choose" />

    <TextView
        android:id="@+id/display_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_dob"
        app:layout_constraintStart_toEndOf="@id/tv3"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:text="" />

</androidx.constraintlayout.widget.ConstraintLayout>