<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rl1"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".quizmain">

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bree_serif"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="35dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="55dp"
        app:srcCompat="@android:drawable/ic_dialog_info"
        android:onClick="generalInfo"/>

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imageView2"
        android:layout_width="49dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:onClick="continueNext"
        android:src="@drawable/ic_account_circle_black_24dp"/>

    <Button
        android:id="@+id/btn_bolly"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:backgroundTint="#E91E63"
        android:text="@string/bollywood"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_comp"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="245dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/computer"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_cricket"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="345dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/cricket"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_gk"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="445dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/gk"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btn_india"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="545dp"
        android:backgroundTint="#D50000"
        android:text="@string/india"
        android:textColor="#FFFFFF" />

    <RelativeLayout
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:background="#fef79a"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv11"
            android:textSize="20sp"
            android:text="@string/instruction"
            android:textColor="#000000"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:layout_marginLeft="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tv10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="100dp"
            android:text="@string/intro"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="160dp"
            android:text="@string/ques"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="210dp"
            android:text="@string/mpq"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="260dp"
            android:text="@string/time"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="310dp"
            android:text="@string/max_mark"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/start"
            android:layout_width="140dp"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/strt"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="18dp"
        android:onClick="backToMenu"
        android:textColor="@color/colorPrimary"
        android:text="@string/back"
        android:visibility="invisible" />

</RelativeLayout>