<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".profile">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/u_img"
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="140dp"
        android:src="@drawable/ic_account_circle_grey_24dp"
        android:onClick="userImg" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/uprofile"
        android:textColor="#000000"
        android:textSize="30sp"
        android:fontFamily="@font/bree_serif"/>

    <TextView
        android:id="@+id/pName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/u_img"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/pname"
        android:textSize="18sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/pMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:text="@string/pmail"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/pDob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pMail"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/pdob"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/pGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pDob"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/pgender"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="dispResult"
        android:text="@string/result"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pGender" />


</androidx.constraintlayout.widget.ConstraintLayout>